--- a/app/src/main/res/layout/top_stories_cell.xml
+++ b/app/src/main/res/layout/top_stories_cell.xml
@@ -31,10 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:textColor="@color/NYTBlack"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="@+id/iv_topStories"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton"
             app:layout_constraintStart_toStartOf="@+id/iv_topStories"
             app:layout_constraintTop_toBottomOf="@+id/iv_topStories"
             tools:text="Title" />
@@ -51,5 +51,14 @@
             app:layout_constraintStart_toStartOf="@+id/tv_titleTopStories"
             app:layout_constraintTop_toBottomOf="@+id/tv_titleTopStories"
             tools:text="TextView" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="@+id/iv_topStories"
+            app:layout_constraintTop_toBottomOf="@+id/iv_topStories"
+            app:srcCompat="@drawable/ic_baseline_bookmark_border_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
