--- a/app/src/main/res/layout/fragment_book_marked.xml
+++ b/app/src/main/res/layout/fragment_book_marked.xml
@@ -4,25 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.TopTopStoriesFragment">
+    tools:context=".fragments.BookMarkedFragmentTop">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/topStoriesRecyclerView"
+        android:id="@+id/rv_bookmarks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/pb_topStories"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/topStoriesRecyclerView"
-        app:layout_constraintEnd_toEndOf="@+id/topStoriesRecyclerView"
-        app:layout_constraintStart_toStartOf="@+id/topStoriesRecyclerView"
-        app:layout_constraintTop_toTopOf="@+id/topStoriesRecyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
